--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -24,6 +24,9 @@
     - x86_64
     - aarch64
     - ppc64le
+  weak_arch_list:
+    - { name: i686, depends_on: aarch64 }
+    - { name: ppc64le, depends_on: aarch64 }
   data:
     definitions:
       distribution: AlmaLinux
@@ -683,6 +686,10 @@
     - aarch64
     - ppc64le
     - s390x
+  weak_arch_list:
+    - { name: i686, depends_on: aarch64 }
+    - { name: s390x, depends_on: aarch64 }
+    - { name: ppc64le, depends_on: aarch64 }
   data:
     definitions:
       distribution: AlmaLinux
