--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -337,6 +337,7 @@
       remote_url: https://repo.almalinux.org/development/almalinux/8/devel/ppc64le/os/
       type: rpm
       debug: false
+      production: true
       priority: 10
     - arch: ppc64le
       name: alma8-distribution-ppc64le
