--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -17,7 +17,7 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen           80;
-
+    client_max_body_size 100M;
     location / {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
