ALBS-224: Improvements for releases (#150)
* ALBS-224: Improvements for releases

- Transfer release logic in class
- Added checking packages presence in repos for all packages and on every stage of release

* Added copying packages by priority arches, showing packages in repos for UI

* Restored some fixes after merging master

* Fix pulp_client call after merging master

* Fix builds search

* fix alembic migration

* fix release package logic

Co-authored-by: Daniil Anfimov <danfimov@cloudlinux.com>

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -27,6 +27,9 @@
     - x86_64
     - aarch64
     - ppc64le
+  copy_priority_arches:
+    - x86_64
+    - aarch64
   weak_arch_list:
     - { name: i686, depends_on: aarch64 }
     - { name: ppc64le, depends_on: aarch64 }
@@ -693,6 +696,9 @@
     - aarch64
     - ppc64le
     - s390x
+  copy_priority_arches:
+    - x86_64
+    - aarch64
   weak_arch_list:
     - { name: i686, depends_on: aarch64 }
     - { name: s390x, depends_on: aarch64 }
