ALBS-297: Added decompression build logs

--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -42,6 +42,10 @@ server {
     }
 
     location /pulp/ {
+        # header for decompressing build logs
+        if ($request_uri ~* (mock.*)(\.log|\.cfg)$) {
+            add_header Content-Encoding gzip;
+        }
         proxy_pass http://pulp;
     }
 }
