--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -42,8 +42,8 @@ server {
     }
 
     location /pulp/ {
-        # header for decompressing build logs
-        if ($request_uri ~* (mock.*)(\.log|\.cfg)$) {
+        # header for decompressing build/test logs
+        if ($request_uri ~* (\.log$)) {
             add_header Content-Encoding gzip;
         }
         proxy_pass http://pulp;
