--- a/reference_data/centos_stream.yml
+++ b/reference_data/centos_stream.yml
@@ -2,6 +2,7 @@
 - name: CentOSStream8
   distr_type: rhel
   distr_version: '8'
+  priority: 2
   test_dist_name: CentOSStream8
   modularity:
       versions:
@@ -16,6 +17,7 @@
 - name: CentOSStream9
   distr_type: rhel
   distr_version: '9'
+  priority: 2
   test_dist_name: CentOSStream9
   modularity:
       versions:
