Add epel to platform flavors

--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -80,3 +80,62 @@
       production: false
       debug: false
       priority: 5
+
+- name: Epel
+  repositories:
+    - name: epel
+      arch: x86_64
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/x86_64/
+      production: false
+      debug: false
+      priority: 5
+    - name: epel-modular
+      arch: x86_64
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/x86_64/
+      production: false
+      debug: false
+      priority: 5
+    - name: epel
+      arch: aarch64
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/aarch64/
+      production: false
+      debug: false
+      priority: 5
+    - name: epel-modular
+      arch: aarch64
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/aarch64/
+      production: false
+      debug: false
+      priority: 5
+    - name: epel
+      arch: ppc64le
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/ppc64le/
+      production: false
+      debug: false
+      priority: 5
+    - name: epel-modular
+      arch: ppc64le
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/ppc64le/
+      production: false
+      debug: false
+      priority: 5
+    - name: epel
+      arch: s390x
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Everything/s390x/
+      production: false
+      debug: false
+      priority: 5
+    - name: epel-modular
+      arch: s390x
+      type: rpm
+      remote_url: https://download.fedoraproject.org/pub/epel/$releasever/Modular/s390x/
+      production: false
+      debug: false
+      priority: 5
